@@ -108,11 +108,20 @@ if test "$GCC" = "yes" && test "$enable_maintainer_mode" = "yes"; then
 	unset option
 fi
 
+ioshdr=yes
+AC_CHECK_HEADER(ios,AC_DEFINE(PQXX_HAVE_IOS,1,
+[Define if you have the <ios> header]),
+ioshdr=no)
+
 streambuf=yes
 AC_CHECK_HEADER(streambuf,AC_DEFINE(PQXX_HAVE_STREAMBUF,1,
 [Define if you have the <streambuf> header; if not, <streambuf.h> is used]),
 streambuf=no)
-# AC_MSG_RESULT($streambuf)
+
+localehdr=yes
+AC_CHECK_HEADER(locale,AC_DEFINE(PQXX_HAVE_LOCALE,1,
+[Define if you have the <locale> header]),
+localehdr=no)
 
 AC_MSG_CHECKING([char_traits template])
 char_traits=yes
