@@ -1,3 +1,8 @@
+2004-05-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in, include/pqxx/result.hxx, src/util.cxx:
+  - Workarounds for the infamous non-release "gcc 2.96", thanks Arjen Baart
+ libpqxx.spec.in:
+  - Added --enable-shared (Arjen Baart)
 2004-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/connection_base.cxx:
   - Strip newlines off COPY TO STDOUT lines in old-libpq code
